--- a/shared/style/base.scss
+++ b/shared/style/base.scss
@@ -1,3 +1,7 @@
+@use './variables';
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap');
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -12,6 +16,7 @@
     font-size: 1.6rem;
     min-height: 100vh;
     width: 100%;
+    font-family: "Poppins",sans-serif;
   }
   
   
