--- a/shared/components/modal/style.module.scss
+++ b/shared/components/modal/style.module.scss
@@ -1,5 +1,7 @@
 .overlay {
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.05);
+  
+  backdrop-filter: blur(5px);
   display: flex;
   justify-content: center;
   align-items: center;
