--- a/shared/style/base.scss
+++ b/shared/style/base.scss
@@ -26,6 +26,19 @@
     height: 2rem;
     cursor: pointer;
   }
+
+  .loading {
+    animation: loading-anime .8s linear both infinite;
+  }
+  
+  @keyframes loading-anime {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
   
   /* @media (prefers-color-scheme: dark) {
     html {
