--- a/app/(dashboard)/entry/style.module.scss
+++ b/app/(dashboard)/entry/style.module.scss
@@ -100,6 +100,8 @@
 }
 
 .main-2 {
+  width: 100%;
+  height: 100%;
   .main-2-content {
     width: 100%;
     height: 100%;
@@ -128,7 +130,7 @@
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 768px) {
   .main img {
     display: none;
   }
@@ -151,6 +153,14 @@
     label {
       padding: 1rem;
       font-size: 1.3rem;
+    }
+  }
+  .main-2 {
+    overflow: auto;
+    .main-2-content {
+   
+      padding-top: 6rem;
+      flex-direction: column;
     }
   }
 }
