--- a/features/task-management/components/kanban/board/style.module.scss
+++ b/features/task-management/components/kanban/board/style.module.scss
@@ -1,3 +1,5 @@
+@use "@/shared/style/mixins" as mixin;
+
 .board {
   background: #e9ecef 0% 0% no-repeat padding-box;
   border-radius: 0.5rem;
@@ -6,8 +8,14 @@
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  min-height: 50vh;
+  max-height: 50vh;
   width: 26rem;
+
+  // &.board-open {
+  //   height: 60vh;
+  // }
+ 
+
   .board-header {
     display: flex;
     align-items: center;
@@ -48,13 +56,12 @@
     justify-content: flex-start;
   }
 
- 
   .popover-button {
     background: unset;
     border: unset;
     color: inherit;
     outline: none;
-  
+
     &:hover,
     &:focus,
     &:active {
@@ -62,7 +69,7 @@
       color: inherit;
     }
   }
-  
+
   .popover-panel {
     background: #fff;
     position: absolute;
@@ -72,14 +79,13 @@
     padding: 1rem;
     z-index: 2;
 
-  
     .popover-content {
       display: flex;
       justify-content: space-between;
       flex-direction: column;
-  
+
       h2 {
-        font-size: .8rem;
+        font-size: 0.8rem;
         font-weight: 500;
       }
       .options {
@@ -93,11 +99,43 @@
         .selection {
           display: flex;
           align-items: center;
-          gap: .5rem;
+          gap: 0.5rem;
         }
       }
     }
   }
+
+  .see-all {
+    position: sticky;
+    right: 0;
+    text-align: end;
+    bottom: 0rem;
+    color: #2474ff;
+    font-size: 1.3rem;
+    visibility: hidden;
+    font-weight: 600;
+  }
 }
 
+@media (max-width: 768px) {
+  .board {
+    background: transparent;
+   
+    padding-bottom: 3rem;
+    // @include mixin.box-shadow();
 
+   
+
+    .popover-panel {
+      left: unset;
+      right: 12%;
+      top: -15%;
+    }
+
+    .see-all {
+      visibility: visible;
+    }
+
+  
+  }
+}
