--- a/shared/style/base.scss
+++ b/shared/style/base.scss
@@ -18,7 +18,9 @@
     min-height: 100vh;
     width: 100%;
     font-family: "Poppins",sans-serif;
-  
+    @media (max-width:768px) {
+      font-size: 1.4rem;
+    }
   }
   
   .icon {
