--- a/widgets/header/ui/style.module.scss
+++ b/widgets/header/ui/style.module.scss
@@ -1,108 +1,153 @@
 header#header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0.2rem;
+  margin: 0;
+  background: #fafafa;
+
+  --transation-duration: 0.2s;
+
+  .img {
+    width: 6rem;
+    height: 6rem;
+    object-fit: cover;
+    background-position: center;
+  }
+
+  .logo {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding: 0.2rem;
-    margin: 0;
-    background: #FAFAFA;
-  
-    --transation-duration: 0.2s;
-  
-    .img {
-      width: 6rem;
-      height: 6rem;
-      object-fit: cover;
-      background-position: center;
+
+    gap: 2rem;
+    border-right: 1px solid #eee;
+    padding-right: 1rem;
+
+    .menu {
+      position: relative;
+      z-index: 2;
     }
-  
-    .logo {
+
+    .menu-button {
+      padding: 1rem;
+      background: transparent;
+      border: 1px solid #eee;
+      border-radius: 1rem;
       display: flex;
       align-items: center;
-  
       gap: 2rem;
-      border-right: 1px solid #eee;
-      padding-right: 1rem;
-  
-      .menu {
-        position: relative;
-        z-index: 2;
-    
-     
-      }
-  
-      .menu-button {
-        padding: 1rem;
-        background: transparent;
-        border: 1px solid #eee;
-        border-radius: 1rem;
-        display: flex;
-        align-items: center;
-        gap: 2rem;
-        font-size: 1.4rem;
-        font-weight: bold;
-        justify-content: space-between;
-        cursor: pointer;
-      }
-  
-      .menu-items {
-        display: flex;
-        align-items: stretch;
-        gap: 2rem;
-        background: #fff;
-        flex-direction: column;
-        left: 0rem;
-        top: 50%;
-        position: absolute;
-        margin-top: 3rem;
-        transform-origin: top;
-        width: 18rem;
-        border-radius: 1rem;
-        box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
+      font-size: 1.4rem;
+      font-weight: bold;
+      justify-content: space-between;
+      cursor: pointer;
+    }
+
+    .menu-items {
+      display: flex;
+      align-items: stretch;
+      gap: 2rem;
+      background: #fff;
+      flex-direction: column;
+      left: 0rem;
+      top: 50%;
+      position: absolute;
+      margin-top: 3rem;
+      transform-origin: top;
+      width: 18rem;
+      border-radius: 1rem;
+      box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
+      transition: var(--transation-duration);
+
+      .menu-item {
+        color: #262753;
+        text-decoration: none;
+        padding: 1rem 1rem;
         transition: var(--transation-duration);
-  
-        .menu-item {
+
+        &:first-child {
+          margin-top: 2rem;
+        }
+
+        &:hover {
+          background-color: #e5e8f2;
+        }
+      }
+    }
+  }
+
+  .nav {
+    position: relative;
+
+    .nav-list {
+      display: flex;
+      align-items: center;
+      gap: 3rem;
+      list-style-type: none;
+
+      .nav-list-item {
+        transition: var(--transation-duration);
+        &:hover {
+          transform: scale(1.05);
+        }
+        a {
           color: #262753;
-          text-decoration: none;
-          padding: 1rem 1rem;
-          transition: var(--transation-duration);
-  
-          &:first-child {
-            margin-top: 2rem;
-          }
-  
-          &:hover {
-            background-color: #E5E8F2;
-          
-          }
         }
       }
     }
-  
+  }
+}
+
+@media (max-width: 768px) {
+  header#header {
+    flex-direction: column;
+    gap: 1rem;
+    .logo {
+      width: 100%;
+
+      .menu-button {
+        img {
+          width: 3rem;
+          height: 3rem;
+        }
+        p,
+        svg {
+          display: none;
+        }
+      }
+    }
+
     .nav {
-      position: relative;
-  
+      display: flex;
+      width: 100%;
+      align-items: center;
+      justify-content: center;
+
+      padding: 1rem;
+      background: #fff;
+
       .nav-list {
-        display: flex;
-        align-items: center;
-        gap: 3rem;
-        list-style-type: none;
-  
+        gap: 4rem;
+        border-radius: 0.5rem;
+        padding: 0.5rem 1rem;
+        background: #ebf1ff 0% 0% no-repeat padding-box;
         .nav-list-item {
-          transition: var(--transation-duration);
-          &:hover {
-            transform: scale(1.05);
-          }
-          a {
-            color: #262753;
+          position: relative;
+        }
+        .nav-list-item.active {
+          &::after {
+            content: "";
+            width: 100%;
+            height: 1px;
+            position: absolute;
+            background-color: #3d7aff;
+            bottom: 0;
+            left: 0;
+            border-radius: 1rem;
+            opacity: 0.5;
           }
         }
       }
     }
   }
-  
-  
-  
-  @media (max-width:768px) {
-      
-  }
+}
