--- a/features/task-management/components/export-publish/style.module.scss
+++ b/features/task-management/components/export-publish/style.module.scss
@@ -21,7 +21,50 @@
     &:nth-child(2) {
       right: 1rem;
     }
-  }
 
- 
+    div {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .bar {
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    border-radius: 50%;
+    height: 5rem;
+    width: 5rem;
+    overflow: hidden;
+    button {
+      width: 100%;
+      top: 0;
+      height: 100%;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      p:first-of-type {
+        display: none;
+      }
+      &:nth-child(1) {
+        right: 0;
+      }
+
+      &:nth-child(2) {
+        right: 0;
+      }
+      div {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        text-align: center;
+      }
+    }
+  }
 }
