--- a/features/task-management/components/kanban/board/style.module.scss
+++ b/features/task-management/components/kanban/board/style.module.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  max-height: 50vh;
+  min-height: 50vh;
   width: 26rem;
 
   // &.board-open {
@@ -114,13 +114,14 @@
     font-size: 1.3rem;
     visibility: hidden;
     font-weight: 600;
+    margin-top: 2rem;
   }
 }
 
 @media (max-width: 768px) {
   .board {
     background: transparent;
-   
+   min-height: 35vh;
     padding-bottom: 3rem;
     // @include mixin.box-shadow();
 
