--- a/features/task-management/components/kanban/style.module.scss
+++ b/features/task-management/components/kanban/style.module.scss
@@ -2,6 +2,7 @@
   padding: 6rem;
   display: flex;
   flex-flow: row wrap;
+
   gap: 4.4rem;
   border-radius: .5rem;
  
@@ -9,5 +10,6 @@
 @media (max-width:768px){
  .kanban {
   padding: 3rem;
+  justify-content: center;
  }
 }
