Add Create Task-Assign User To Task-And UI Set

--- a/features/task-management/components/kanban/board/style.module.scss
+++ b/features/task-management/components/kanban/board/style.module.scss
@@ -14,7 +14,6 @@
   // &.board-open {
   //   height: 60vh;
   // }
- 
 
   .board-header {
     display: flex;
@@ -118,14 +117,140 @@
   }
 }
 
+.dialog {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.dialog-overlay {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.1);
+  width: 100%;
+  inset: 0;
+}
+.panel-container {
+  position: fixed;
+  z-index: 2;
+  top: 20%;
+  vertical-align: middle;
+  margin: 0 auto;
+  transform: translateX(-50%);
+  left: 50%;
+  background: #fff;
+  border-radius: 1rem;
+  
+}
+
+.dialog-panel {
+  display: flex;
+  justify-content: center;
+
+  flex-direction: column;
+  padding: 2rem;
+  width: 100%;
+
+  .dialog-title {
+    font-weight: 400;
+    margin-bottom: 2rem;
+  }
+
+  .modal-detail {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 3rem;
+
+    .formik-panel {
+      display: flex;
+      gap: 1rem;
+      flex-flow: row wrap;
+      justify-content: space-between;
+
+      .task-form {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        width: 50vw;
+        position: relative;
+        height: 100%;
+        flex: 1;
+
+        input,
+        select {
+          padding: 1.2rem 1rem;
+          border: none;
+          outline: none;
+          max-width: 79%;
+          border-radius: 0.5rem;
+          background: #f3f5fa;
+          border: 1px solid #E0E0E0;
+
+          &::placeholder{
+            color: #989393;;
+          }
+        }
+
+        .date-select-container {
+     
+          display: flex;
+         
+          flex-flow: row;
+
+          label, label> *::placeholder {
+            color: #989393;;
+          }
+        }
+
+      
+      }
+
+      .geolocation {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 2rem;
+
+         &>p{
+          white-space: nowrap;
+          color: #989393;
+          font-size: 1.4rem;
+         }
+
+         .work-time {
+          display: flex;
+          justify-content: space-between;
+          gap: 2rem;
+
+          p{
+            color: #989393;
+          }
+          div {
+            background: #F3F5FA;
+            padding: 1rem;
+            border: 1px solid #E0E0E0;
+            border-radius: .5rem;
+          }
+         }
+      }
+    }
+  }
+
+  .actions {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    justify-content: center;
+
+    flex-flow: row;
+  }
+}
+
 @media (max-width: 768px) {
   .board {
     background: transparent;
-   min-height: 35vh;
+    min-height: 35vh;
     padding-bottom: 3rem;
     // @include mixin.box-shadow();
-
-   
 
     .popover-panel {
       left: unset;
@@ -136,7 +261,29 @@
     .see-all {
       visibility: visible;
     }
+   
+  }
 
+
+  .panel-container {
+    top: 5%;
+  }
+  .dialog-panel {
+
+    .modal-detail {
+    
+      .formik-panel {
   
+        .task-form {
+          .date-select-container {
+            flex-flow: column;
+          }
+        }
+      }
+      .geolocation {
+        align-items: center; 
+      
+      }
+    }
   }
 }
