--- a/features/task-management/components/kanban/board-item/style.module.scss
+++ b/features/task-management/components/kanban/board-item/style.module.scss
@@ -99,11 +99,18 @@
       align-items: center;
       justify-content: center;
 
+      .user-area {
+        display: flex;
+        align-items: center;
+        gap: .5rem;
+      }
       .empty {
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 0.5rem;
+        width: 3rem;
+        height: 3rem;
       }
       .avatar {
         border: 2px solid #fff;
@@ -264,7 +271,7 @@
     .user-list {
       display: flex;
       align-items: center;
-      margin-bottom: 3rem;
+      margin-bottom: 1rem;
 
       .user {
         display: flex;
@@ -272,6 +279,13 @@
         justify-content: flex-start;
         padding: 0.7rem;
         background: #e5f4ff 0% 0% no-repeat padding-box;
+
+        transition: .2s;
+        &.selected {
+          color: #fff;
+          background: #35a0ed 0% 0% no-repeat padding-box;
+
+        }
 
         gap: 1rem;
         border-radius: 0.5rem;
@@ -324,7 +338,7 @@
       margin-top: 0.5rem;
       h3 {
         font-size: 1.3rem;
-        font-weight: 500;
+        font-weight: 400;
       }
 
       .user-large {
@@ -341,6 +355,10 @@
           font-weight: 500;
         }
       }
+    }
+
+    .save-btn {
+      margin: 1rem 0;
     }
   }
 }
@@ -365,33 +383,15 @@
     left: unset;
  
   }
+  .add-user-panel {
+    left:unset;
+    right: -100%;
+    width: 25rem;
+   
+  }
 }
 
 
 
 
 
-
-
-.enter-transition {
-  transition: all 0.2s ease;
-}
-
-.enter-from-transition {
-  opacity: 0;
-}
-
-.enter-to-transition {
-  opacity: 1;
-  transform: none;
-}
-.leave-transition {
-  transition: all 0.2s ease;
-}
-.leave-from-transition {
-  opacity: 1;
-  transform: none;
-}
-.leave-to-transition {
-  opacity: 0;
-}
