--- a/shared/style/base.scss
+++ b/shared/style/base.scss
@@ -1,50 +1,76 @@
-@use './variables';
-@import 'react-date-range/dist/styles.css'; // main css file
-@import 'react-date-range/dist/theme/default.css'; // theme css file
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap');
+@use "./variables";
+@import "react-date-range/dist/styles.css"; // main css file
+@import "react-date-range/dist/theme/default.css"; // theme css file
+@import "react-datepicker/dist/react-datepicker.css";
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap");
 
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-  
-  html {
-    font-size: 62.5%;
-  }
-  
-  body {
-    font-size: 1.6rem;
-    min-height: 100vh;
-    width: 100%;
-    font-family: "Poppins",sans-serif;
-    @media (max-width:768px) {
-      font-size: 1.4rem;
-    }
-  }
-  
-  .icon {
-    width: 2rem;
-    height: 2rem;
-    cursor: pointer;
-  }
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
-  .loading {
-    animation: loading-anime .8s linear both infinite;
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  min-height: 100vh;
+  width: 100%;
+  font-family: "Poppins", sans-serif;
+  @media (max-width: 768px) {
+    font-size: 1.4rem;
   }
-  
-  @keyframes loading-anime {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
+}
+
+.icon {
+  width: 2rem;
+  height: 2rem;
+  cursor: pointer;
+}
+
+.loading {
+  animation: loading-anime 0.8s linear both infinite;
+}
+
+.enter-transition {
+  transition: all 0.2s ease;
+}
+
+.enter-from-transition {
+  opacity: 0;
+}
+
+.enter-to-transition {
+  opacity: 1;
+  transform: none;
+}
+.leave-transition {
+  transition: all 0.2s ease;
+}
+.leave-from-transition {
+  opacity: 1;
+  transform: none;
+}
+.leave-to-transition {
+  opacity: 0;
+}
+
+
+
+@keyframes loading-anime {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  /* @media (prefers-color-scheme: dark) {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* @media (prefers-color-scheme: dark) {
     html {
       color-scheme: dark;
     }
   } */
-  
