--- a/features/task-management/components/kanban/board/style.module.scss
+++ b/features/task-management/components/kanban/board/style.module.scss
@@ -134,8 +134,8 @@
   top: 20%;
   vertical-align: middle;
   margin: 0 auto;
-  transform: translateX(-50%);
   left: 50%;
+  transform: translateX(-50%) !important;
   background: #fff;
   border-radius: 1rem;
   
