--- a/shared/style/_variables.scss
+++ b/shared/style/_variables.scss
@@ -1,4 +1,9 @@
 :root {
     --white:#fff;
     --transition-duration:.2s;
+    --board-bg:#e9ecef;
+    --dark-blue:#2474ff;
+    --input-bg:#f3f5fa;
+    --input-border:#e0e0e0;
+    --input-placeholder:#989393;
 }
