--- a/features/task-management/components/kanban/board/style.module.scss
+++ b/features/task-management/components/kanban/board/style.module.scss
@@ -11,6 +11,10 @@
   min-height: 50vh;
   width: 26rem;
 
+  &.loading {
+    opacity: .5;
+  }
+
   // &.board-open {
   //   height: 60vh;
   // }
