--- a/shared/components/input/style.module.scss
+++ b/shared/components/input/style.module.scss
@@ -16,7 +16,7 @@
   }
 
   &.small {
-    --btn-padding: 1rem 1rem;
+    --btn-padding: .3rem .5rem;
   }
   &.medium {
     --btn-padding: 1.5rem 1rem;
