--- a/shared/style/base.scss
+++ b/shared/style/base.scss
@@ -2,6 +2,8 @@
 @import "react-date-range/dist/styles.css"; // main css file
 @import "react-date-range/dist/theme/default.css"; // theme css file
 @import "react-datepicker/dist/react-datepicker.css";
+@import "https://unpkg.com/leaflet@1.6.0/dist/leaflet.css";
+@import "leaflet/dist/leaflet.css";
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap");
 
