--- a/features/task-management/components/kanban/board-item/style.module.scss
+++ b/features/task-management/components/kanban/board-item/style.module.scss
@@ -37,6 +37,11 @@
     align-items: center;
     justify-content: space-between;
 
+    input {
+      font-size: 1.4rem;
+      border: none;
+    }
+
     h3 {
       font-size: 1rem;
       font-weight: 600;
@@ -68,7 +73,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 2rem;
+    gap: 1rem;
+
+    .owner {
+      display: flex;
+      align-items: center;
+      gap: .2rem;
+
+      span {
+        font-size: 1.2rem;
+      }
+    }
 
     .progress {
       width: 100%;
@@ -271,7 +286,16 @@
     .user-list {
       display: flex;
       align-items: center;
+      flex-flow: row wrap;
+      gap: .5rem;
       margin-bottom: 1rem;
+      max-height:10rem;
+      overflow:auto;
+
+
+      &.hidden {
+        display: none;
+      }
 
       .user {
         display: flex;
@@ -279,7 +303,7 @@
         justify-content: flex-start;
         padding: 0.7rem;
         background: #e5f4ff 0% 0% no-repeat padding-box;
-
+        max-width: 12rem;
         transition: .2s;
         &.selected {
           color: #fff;
@@ -297,6 +321,11 @@
           p {
             font-size: 1.2rem;
           }
+        }
+
+        .close-icon {
+          font-size: 2rem;
+         
         }
       }
     }
