--- a/features/task-management/components/kanban/board-item/style.module.scss
+++ b/features/task-management/components/kanban/board-item/style.module.scss
@@ -52,6 +52,7 @@
       gap: 1rem;
       align-items: center;
       color: #e0e0e0;
+      margin-left: 0.5rem;
 
       & > * {
         cursor: pointer;
