--- a/features/task-management/components/export-publish/style.module.scss
+++ b/features/task-management/components/export-publish/style.module.scss
@@ -5,14 +5,14 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  height: 5rem;
+  height: 7rem;
   padding: 1rem;
   background: #fff;
   @include mixin.box-shadow();
 
   button {
     position: absolute;
-    top: 1rem;
+    //top: 1rem;
     max-width: 10rem;
     &:nth-child(1) {
       right: 10rem;
