--- a/features/task-management/components/kanban/board-item/task-details/style.module.scss
+++ b/features/task-management/components/kanban/board-item/task-details/style.module.scss
@@ -127,7 +127,8 @@
   @media (max-width: 768px) {
   
     .panel-container {
-      top: 5%;
+      bottom: 0%;
+      width: 43rem;
     }
     .dialog-panel {
       .modal-detail {
