--- a/features/task-management/components/export-publish/style.module.scss
+++ b/features/task-management/components/export-publish/style.module.scss
@@ -19,7 +19,8 @@
   .plusicon{ 
     display: flex;
     justify-content: space-between;
-    background-color: blue;
+    
+    background-color: var(--dark-blue);
     border-radius: 5px;
     height: 3rem;
     width: 3rem;
@@ -60,6 +61,7 @@
   }
   button {
     position: absolute;
+
   
     //top: 1rem;
     max-width: 10rem;
@@ -95,6 +97,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      background-color: var(--dark-blue);
 
       p:first-of-type {
         display: none;
