--- a/features/task-management/components/kanban/board-item/adress-search/style.module.scss
+++ b/features/task-management/components/kanban/board-item/adress-search/style.module.scss
@@ -1,14 +1,19 @@
 .options {
     list-style-type: none;
-    max-height: 20vh;
-    overflow: scroll;
+    max-height: 40vh;
+    z-index: 2;
+   
+    overflow-x:hidden;
+     overflow-y:scroll;
     
 }
 
 .option {
-    padding: .5rem .3rem;
+    padding: 1.5rem 0.3rem;
     border: 1px solid #ccc;
+    z-index: 2;
     border-radius: 5%;
-    margin: .3rem 0;
+    margin: 0.3rem 4px;
+   
     
 }
