--- a/features/task-management/components/kanban/board-item/task-details/style.module.scss
+++ b/features/task-management/components/kanban/board-item/task-details/style.module.scss
@@ -13,17 +13,20 @@
   .panel-container {
     position: fixed;
     z-index: 2;
-    top: 20%;
-    vertical-align: middle;
+    top: 18%;
+    vertical-align: bottom;
     margin: 0 auto;
-    left: 50%;
-    transform: translateX(-50%) !important;
+    right: 0%;
+    transform: translateX(0%) !important;
     background: var(--white);
-    border-radius: 1rem;
+    //border-radius: 1rem;
+    height: 100%;
+    width: 29%;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
   }
   
   .dialog-panel {
-    display: flex;
+    //display: flex;
     justify-content: center;
   
     flex-direction: column;
@@ -32,7 +35,7 @@
   
     .dialog-title {
       font-weight: 400;
-      margin-bottom: 2rem;
+      margin-bottom: 6rem;
     }
   
     .modal-detail {
@@ -42,7 +45,7 @@
       gap: 3rem;
   
       .formik-panel {
-        display: flex;
+        //display: flex;
         gap: 1rem;
         flex-flow: row wrap;
         justify-content: space-between;
@@ -51,7 +54,7 @@
           display: flex;
           flex-direction: column;
           gap: 1rem;
-          width: 50vw;
+          width: 100%;
           position: relative;
           height: 100%;
           flex: 1;
@@ -61,10 +64,11 @@
             padding: 1.2rem 1rem;
             border: none;
             outline: none;
-            max-width: 79%;
+            width: 100%;
             border-radius: 0.5rem;
             background: var(--input-bg);
             border: 1px solid var(--input-border);
+            height: 6rem;
   
             &::placeholder {
               color: var(--input-placeholder);
@@ -85,9 +89,8 @@
   
         .geolocation {
           display: flex;
-          flex-direction: column;
           align-items: center;
-          margin-bottom: 2rem;
+          margin: 3rem 5rem;
   
           & > p {
             white-space: nowrap;
