--- a/features/task-management/components/kanban/board/style.module.scss
+++ b/features/task-management/components/kanban/board/style.module.scss
@@ -1,10 +1,9 @@
 @use "@/shared/style/mixins" as mixin;
 
 .board {
-  //background:var(--board-bg) 0% 0% no-repeat padding-box;
+  background:var(--board-bg) 0% 0% no-repeat padding-box;
   //border-radius: 0.5rem;
-  border-right: solid 1px #CFD0D4;
-  -webkit-box-shadow: inset 0px -709px 709px -504px #F6F7FB;
+  border-right: solid 1px #fff;
   padding: 1.5rem;
   display: flex;
   flex-direction: column;
@@ -14,7 +13,7 @@
   width: 26rem;
   background-size:cover;
    // -moz-box-shadow: inset 0px 850px 500px -500px #fff;
-    //-webkit-box-shadow: inset 0px -709px 709px -504px #F6F7FB;
+    -webkit-box-shadow: inset 0px -709px 709px -504px #F6F7FB;
     //-o-box-shadow: inset 0px 850px 500px -500px #fff;
 
   
