--- a/features/task-management/components/export-publish/style.module.scss
+++ b/features/task-management/components/export-publish/style.module.scss
@@ -39,6 +39,8 @@
     font-size: 13px;
     padding: 6px;
     border: 2px solid #fff;
+    height: 35px;
+    align-items: center;
   }
   .bgcircles{ 
     display: flex;
