--- a/features/task-management/components/kanban/board-item/style.module.scss
+++ b/features/task-management/components/kanban/board-item/style.module.scss
@@ -303,7 +303,7 @@
         align-items: center;
         justify-content: flex-start;
         padding: 0.7rem;
-        background: #e5f4ff 0% 0% no-repeat padding-box;
+        //background: #e5f4ff 0% 0% no-repeat padding-box;
         max-width: 12rem;
         transition: .2s;
         &.selected {
