--- a/widgets/header/ui/style.module.scss
+++ b/widgets/header/ui/style.module.scss
@@ -47,18 +47,20 @@ header#header {
 
     .menu-items {
       display: flex;
-      align-items: stretch;
-      gap: 2rem;
+      align-items: flex-start;
+      gap: 1rem;
       background: #fff;
       flex-direction: column;
-      left: 0rem;
+      left: 5rem;
       top: 50%;
       position: absolute;
-      margin-top: 3rem;
+      margin-top: 2rem;
       transform-origin: top;
-      width: 18rem;
+      padding-left: 8px;
+      width: 23rem;
+      padding-bottom: 10px;
       border-radius: 1rem;
-      box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 1px 9px rgba(0, 0, 0, 0.1);
       transition: var(--transation-duration);
 
       .menu-item {
@@ -73,6 +75,8 @@ header#header {
 
         &:hover {
           background-color: #e5e8f2;
+          width: 96%;
+          padding-left: 20px;
         }
       }
     }
@@ -88,18 +92,20 @@ header#header {
 
   .menu-items-avatar {
     display: flex;
-    align-items: stretch;
-    gap: 2rem;
+    align-items: flex-start;
+    gap: 1rem;
     background: #fff;
     flex-direction: column;
-    left: -9rem;
-    top: 50%;
+    right: 0rem;
+    top: 5rem;
     position: absolute;
-    margin-top: 3rem;
+    margin-top: 2rem;
     transform-origin: top;
-    width: 18rem;
+    padding-left: 8px;
+    width: 23rem;
+    padding-bottom: 10px;
     border-radius: 1rem;
-    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 1px 9px rgba(0, 0, 0, 0.1);
     transition: var(--transation-duration);
 
     .menu-item-avatar {
@@ -114,6 +120,8 @@ header#header {
 
       &:hover {
         background-color: #e5e8f2;
+        width: 97%;
+        padding-left: 15px;
       }
     }
   }
@@ -145,8 +153,12 @@ header#header {
 
 @media (max-width: 768px) {
   header#header {
-    flex-direction: column;
+    //flex-direction: column;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
     gap: 1rem;
+    position: sticky;
+    z-index: 1;
+    top: 0px;
 
     .logo {
       width: 100%;
@@ -170,14 +182,14 @@ header#header {
       align-items: center;
       justify-content: center;
 
-      padding: 1rem;
+      //padding: 1rem;
       background: #fff;
 
       .nav-list {
         gap: 4rem;
         border-radius: 0.5rem;
         padding: 0.5rem 1rem;
-        background: #ebf1ff 0% 0% no-repeat padding-box;
+        //background: #ebf1ff 0% 0% no-repeat padding-box;
 
         .nav-list-item {
           position: relative;
