--- a/features/task-management/components/export-publish/style.module.scss
+++ b/features/task-management/components/export-publish/style.module.scss
@@ -10,10 +10,13 @@
   padding: 1rem;
   background: #fff;
   border-top: 1px solid #ebebeb;
-  //@include mixin.box-shadow();
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+
+ 
   .buttons {
     display: flex;
-    justify-content: center;
+    justify-content: center;    z-index: 1;
     align-items: center;
 
   }
