--- a/features/task-management/components/kanban/board/style.module.scss
+++ b/features/task-management/components/kanban/board/style.module.scss
@@ -86,11 +86,13 @@
   .popover-panel {
     background: #fff;
     position: absolute;
-    width: 12rem;
-    left: 100%;
-    top: 0%;
-    padding: 1rem;
-    z-index: 2;
+    width: 17rem;
+    left: 95%;
+    top: 5%;
+    padding: 2rem;
+    z-index: 150;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
 
     .popover-content {
       display: flex;
@@ -98,7 +100,7 @@
       flex-direction: column;
 
       h2 {
-        font-size: 0.8rem;
+        font-size: 1.2rem;
         font-weight: 500;
       }
       .options {
@@ -113,6 +115,8 @@
           display: flex;
           align-items: center;
           gap: 0.5rem;
+          margin: 1px 1px 11px;
+          font-size: 15px;
         }
       }
     }
@@ -276,8 +280,8 @@
 
     .popover-panel {
       left: unset;
-      right: 12%;
-      top: -15%;
+      right: 9%;
+      top: 4%;
     }
 
     .see-all {
