--- a/features/task-management/components/export-publish/style.module.scss
+++ b/features/task-management/components/export-publish/style.module.scss
@@ -11,7 +11,7 @@
   background: #fff;
   border-top: 1px solid #ebebeb;
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
-  z-index: 100;
+  z-index: 99;
 
  
   .buttons {
@@ -52,6 +52,16 @@
     justify-content: space-between;
     position: absolute;
     left: 80px;
+    background-color: #EBEBEB;
+    padding: 4px;
+    border-radius: 21px;
+  }
+  .bgcircles1{ 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    left:  109px;
     background-color: #EBEBEB;
     padding: 4px;
     border-radius: 21px;
