--- a/shared/components/button/style.module.scss
+++ b/shared/components/button/style.module.scss
@@ -1,12 +1,14 @@
 .button {
-  --_color-bg: var(--color, violet);
-  --_color-text: var(--color-text, #fff);
+  --_color-bg: var(--color, #FFF);
+ 
   --_font-size: var(--font-size, 1.2rem);
   --_btn-padding: var(--btn-padding, 0.5rem 1rem);
-  box-shadow: 0px 0px 15px 0.5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 8px 7px -7.5px rgba(0, 0, 0, 0.1);
   border: none;
   outline: none;
   width: 100%;
+  border: solid 1px #2474ff;
+
 
   font-size: var(--_font-size);
   padding: var(--_btn-padding);
@@ -14,12 +16,16 @@
   font-weight: bold;
   &:hover,
   &:active {
-    transform: scale(1.1);
+   // transform: scale(0.0);
     background: var(--_color-bg);
+    cursor: pointer;
+  
+   
   }
-  transition: all 0.1s ease-in-out;
+  //transition: all 0.1s ease-in-out;
   background: var(--_color-bg);
   color: var(--_color-text);
+  cursor: pointer;
 
   &:disabled {
     opacity: .3;
@@ -29,10 +35,18 @@
   &.primary {
     //--color: linear-gradient(to right, #00c7fc 10%, #077afb);
      background-color: var(--dark-blue);
+     --_color-text: var(--color-text, #fff);
    
   }
   &.secondary {
     --color: linear-gradient(to right, #353c64 40%, #1e233b);
+    --_color-text: var(--color-text, #fff);
+    
+  }
+  &.plain {
+    background-color: var(--white);
+    --_color-text: var(--color-text, #fff);
+    border: #2474ff 1px solid;
   
   }
   &.small {
