--- a/shared/style/base.scss
+++ b/shared/style/base.scss
@@ -6,6 +6,7 @@
 @import "leaflet/dist/leaflet.css";
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap');
 
 * {
   box-sizing: border-box;
