--- a/features/employee/profile/style.module.scss
+++ b/features/employee/profile/style.module.scss
@@ -2,28 +2,50 @@
     background-color: var(--main-bg);
     height: 100vh;
 
-    .profile-img-card {
-        width: 36.8rem;
-        height: 11.3rem;
-        background-color: #FFFFFF;
-        box-shadow: 0rem 0.3rem 0.6rem #00000029;
-        border-radius: 2rem;
+    .profile-list {
+        justify-content: center;
         display: flex;
-        margin: auto;
+        flex-direction: column;
         align-items: center;
+        margin-bottom: 20rem;
 
 
-        .profile-img {
-            background-color: #E9EAEF;
-            width: 8rem;
-            height: 8rem;
-            border-radius: 100%;
-            flex: 1;
+        .profile-img-card {
+            width: 36.8rem;
+            height: 11.3rem;
+            background-color: #FFFFFF;
+            box-shadow: 0rem 0.3rem 0.6rem #00000029;
+            border-radius: 2rem;
+            display: flex;
             align-items: center;
+            justify-content: center;
+            gap: 3rem;
+
+            .profile-img {
+                background-color: #E9EAEF;
+                width: 8rem;
+                height: 8rem;
+                border-radius: 100%;
+                order: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-left: 1rem;
+                position: relative;
+
+                .status {
+                    width: 2.7rem;
+                    height: 2.7rem;
+                    background-color: #13A82C;
+                    position: absolute;
+                    border-radius: 50%;
+                    right: 0;
+                    bottom: 0;
+                }
+            }
         }
 
         .employee-name {
-            flex: 3;
             margin-right: 4rem;
             display: flex;
             flex-direction: column;
@@ -32,23 +54,25 @@
 
             .employee-name p:first-child {
                 color: #9394A7;
-                /* Employee kelimesinin rengi */
+
             }
 
-            .employee-name h3 {
-                margin-bottom: 10px;
-                /* Başlık ile p tagları arasında boşluk bırakır */
+            h3 {
+                font-size: 2rem;
+                margin-bottom: 0.5rem;
+                color: #262753;
+
             }
 
             .employee-name div {
                 display: flex;
-                /* p taglarını yan yana yerleştirmek için */
+
             }
 
             p {
-                color: #262753;
+                font-size: 1.8rem;
+                color: #9394A7;
                 display: inline;
-                margin-right: 5px;
 
             }
         }
@@ -61,9 +85,85 @@
         width: 36.8rem;
         border-radius: 2rem;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         /* Yatay ortalama */
         align-items: center;
+        // Dikeyde ortala
         margin-top: 4rem;
+        gap: 3.5rem;
+
+        .name {
+            .field {
+
+                // display: flex;
+                Label {
+                    color: #707070;
+                    font-size: 1.6rem;
+                    margin-bottom: 2rem;
+                }
+
+                .name-input {
+                    display: flex;
+
+                    .pencil-icon {
+                        color: #707070;
+                        margin-left: 13rem;
+                    }
+
+                    Input {
+                        border: none;
+                        outline: none;
+                    }
+
+                }
+
+                .name-input input::placeholder {
+                    color: #262753;
+                    font-weight: bold;
+                    font-size: 1.6rem;
+                }
+            }
+        }
+    }
+
+    .sign-out-list {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .sign-out {
+            width: 36.8rem;
+            height: 6.4rem;
+            background-color: #FFFFFF;
+            border-radius: 2rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            h3 {
+                font-size: 1.8rem;
+                color: #262753;
+            }
+
+        }
+    }
+
+    .footer {
+        color: #9394A7;
+        width: 100%;
+        height: 8.3rem;
+        background-color: #FFFFFF;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10rem;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+
+        p {
+            font-size: 1.2rem;
+        }
     }
 }
